# btrfs-simple-snapshot

./: Cargo.toml  LICENSE  README.md  flake.nix  nixos-module.nix  package.nix
src/: args.rs  errors.rs  main.rs  utils.rs
src/args/: argument.rs  cli.rs  mod.rs  subcommand.rs
src/btrfs/: clean.rs  mod.rs  snapshot.rs  subvol_show.rs
