[package]
name = "btrfs-auto-snapshot"
description = "Create and manage Btrfs snapshots automatically"
version = "0.1.0"
authors = ["Vishal Das <26341736+dvishal485@users.noreply.github.com>"]
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
colog = "1.3.0"
derive_builder = "0.20.2"
log = "0.4.27"
thiserror = "2.0.12"
